<resources>
    <string name="app_name">ALOBORG</string>
    <string name="title">(ALOBORG Chat App)</string>
    <string name="author_name">By Zaya Labs</string>
    <string name="author_url">www.zaya.in</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>

    <!--URLS-->
    <string name="backend_url">http://alobot.zaya.in</string>
    <string name="end_point_chat">/chat_input</string>
</resources>
